--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   <body>
     <h1>Hello World</h1>
     <h1>Setting Up Testing Library</h1>
-    <div id="root"></div>
+    <pre id="root"></pre>
+    <!-- <textarea id="root"></textarea> -->
   </body>
   <script src="./index.js"></script>
 </html>
