--- a/index.html
+++ b/index.html
@@ -11,12 +11,96 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
-    <h1>Hello World</h1>
-    <h1>Setting Up Testing Library</h1>
-    <pre id="root"></pre>
+    <div class="container p-5">
+      <!-- search bar section -->
+      <div class="input-group mb-3">
+        <div class="dropdown">
+          <button
+            class="btn btn-secondary dropdown-toggle"
+            type="button"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
+          >
+            GET
+          </button>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">GET</a></li>
+            <li><a class="dropdown-item" href="#">POST</a></li>
+            <li><a class="dropdown-item" href="#">PUT</a></li>
+            <li><a class="dropdown-item" href="#">DELETE</a></li>
+          </ul>
+        </div>
+        <input
+          type="text"
+          class="form-control"
+          placeholder="URL"
+          aria-label="Recipient's username"
+          aria-describedby="button-addon2"
+        />
+        <button class="btn btn-outline-info" type="button" id="sendBtn">
+          Send
+        </button>
+      </div>
+
+      <div class="position-relative" id="root-wrapper">
+        <pre id="root"></pre>
+        <div class="copy-btn position-absolute d-flex gap-1">
+          <button class="btn btn-primary" id="copyBtn">copy</button>
+          <button class="btn btn-primary" id="hideBtn">X</button>
+        </div>
+      </div>
+
+      <!-- method list section -->
+      <!-- <div class="method-list">
+        <ul class="d-flex justify-items-center gap-2">
+          <li>Authorization</li>
+          <li>Body</li>
+        </ul>
+      </div> -->
+
+      <!-- authorization input-box -->
+      <div class="mb-3">
+        <label for="basic-url" class="form-label">Authorization Key</label>
+        <div class="input-group mb-3">
+          <span class="input-group-text" id="basic-addon1">Authorization</span>
+          <input
+            type="text"
+            class="form-control"
+            placeholder="Bearer"
+            aria-label="Username"
+            aria-describedby="basic-addon1"
+          />
+        </div>
+      </div>
+
+      <div class="input-group d-flex flex-column">
+        <label for="basic-url" class="form-label">Add Payload</label>
+        <textarea
+          class="form-control w-100 text-area"
+          aria-label="With textarea"
+        ></textarea>
+      </div>
+    </div>
+
     <!-- <textarea id="root"></textarea> -->
   </body>
   <script src="./index.js"></script>
+  <script
+    src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+    integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+    crossorigin="anonymous"
+  ></script>
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
+    integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
+    crossorigin="anonymous"
+  ></script>
 </html>
