[add] send btn loading

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           aria-describedby="button-addon2"
         />
         <button class="btn btn-outline-info" type="button" id="sendBtn">
-          Send<span id="loading"></span>
+          Send
         </button>
       </div>
 
