--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.52.2/codemirror.min.css"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.52.2/theme/monokai.min.css"
+    />
   </head>
   <body>
     <div class="container p-5">
@@ -46,7 +55,7 @@
       </div>
 
       <div class="position-relative" id="root-wrapper">
-        <pre id="root"></pre>
+        <div id="my-div"></div>
         <div class="copy-btn position-absolute d-flex gap-1">
           <button class="btn btn-primary" id="copyBtn">copy</button>
           <button class="btn btn-primary" id="hideBtn">X</button>
@@ -62,7 +71,7 @@
       </div> -->
 
       <!-- authorization input-box -->
-      <div class="mb-3">
+      <div class="mb-3 mt-1">
         <label for="basic-url" class="form-label">Authorization Key</label>
         <div class="input-group mb-3">
           <span class="input-group-text" id="basic-addon1">Authorization</span>
@@ -89,7 +98,13 @@
 
     <!-- <textarea id="root"></textarea> -->
   </body>
+
+  <script
+    type="text/javascript"
+    src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.52.2/codemirror.min.js"
+  ></script>
   <script src="./index.js"></script>
+
   <script
     src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
     integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
