[fixed] copy to clip issue

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 
       <div class="position-relative" id="root-wrapper">
         <div id="my-div"></div>
+        <pre id="root" class="d-none"></pre>
         <div class="copy-btn position-absolute d-flex gap-1">
           <button class="btn btn-primary" id="copyBtn">copy</button>
           <button class="btn btn-primary" id="hideBtn">X</button>
