[add] header and footer

--- a/index.html
+++ b/index.html
@@ -28,6 +28,40 @@
     />
   </head>
   <body>
+    <div class="container-fluid main-border">
+      <div class="container py-3">
+        <nav class="navbar bg-body-tertiary">
+          <div class="container-fluid d-flex">
+            <a class="navbar-brand" href="#">
+              <!-- src="https://i.ibb.co/K5pRQtH/postman-seeklogo-com.png" -->
+              <img
+                src="https://ui.dev/images/typescript-logo.svg"
+                alt="Logo"
+                width="30"
+                height="24"
+                class="d-inline-block align-text-top"
+              />
+              <span class="text-white">IoDean</span>
+            </a>
+
+            <div>
+              <a
+                href="https://github.com/shaon07/apiTypeChecker"
+                class="text-white"
+                target="_blank"
+              >
+                <img
+                  src="https://seeklogo.com/images/G/github-logo-2E3852456C-seeklogo.com.png"
+                  alt="github"
+                  width="30"
+                  height="30"
+                />
+              </a>
+            </div>
+          </div>
+        </nav>
+      </div>
+    </div>
     <div class="container p-5">
       <!-- search bar section -->
       <div class="input-group mb-3">
@@ -98,6 +132,77 @@
     </div>
 
     <!-- <textarea id="root"></textarea> -->
+
+    <div class="container-fluid footer-border">
+      <div class="container py-3">
+        <footer class="navbar bg-body-tertiary">
+          <div class="container-fluid d-flex">
+            <a class="navbar-brand" href="#">
+              <!-- src="https://i.ibb.co/K5pRQtH/postman-seeklogo-com.png" -->
+              <img
+                src="https://ui.dev/images/typescript-logo.svg"
+                alt="Logo"
+                width="30"
+                height="24"
+                class="d-inline-block align-text-top"
+              />
+              <span class="text-white">Copyright IoDean</span>
+            </a>
+
+            <div class="d-flex gap-2 justify-items-center">
+              <div>
+                <a
+                  href="https://github.com/shaon07softic"
+                  class="text-white d-flex flex-column align-items-center"
+                  target="_blank"
+                >
+                  <img
+                    src="https://avatars.githubusercontent.com/u/121743010?v=4"
+                    alt="github"
+                    width="30"
+                    height="30"
+                    class="rounded-pill"
+                  />
+                  <span class="user-title">shaon07softic</span>
+                </a>
+              </div>
+              <div>
+                <a
+                  href="https://github.com/shaon07"
+                  class="text-white d-flex flex-column align-items-center"
+                  target="_blank"
+                >
+                  <img
+                    src="https://avatars.githubusercontent.com/u/59138405?v=4"
+                    alt="github"
+                    width="30"
+                    height="30"
+                    class="rounded-pill"
+                  />
+                  <span class="user-title">Shaon07</span>
+                </a>
+              </div>
+              <div>
+                <a
+                  href="https://avatars.githubusercontent.com/u/59138405?v=4"
+                  class="text-white d-flex flex-column align-items-center"
+                  target="_blank"
+                >
+                  <img
+                    src="https://avatars.githubusercontent.com/u/65497148?v=4"
+                    alt="github"
+                    width="30"
+                    height="30"
+                    class="rounded-pill"
+                  />
+                  <span class="user-title">nahidnfr123</span>
+                </a>
+              </div>
+            </div>
+          </div>
+        </footer>
+      </div>
+    </div>
   </body>
 
   <script
