[update] footer design

--- a/index.html
+++ b/index.html
@@ -137,7 +137,10 @@
       <div class="container py-3">
         <footer class="navbar bg-body-tertiary">
           <div class="container-fluid d-flex">
-            <a class="navbar-brand" href="#">
+            <a
+              class="navbar-brand d-flex flex-column align-items-center"
+              href="#"
+            >
               <!-- src="https://i.ibb.co/K5pRQtH/postman-seeklogo-com.png" -->
               <img
                 src="https://ui.dev/images/typescript-logo.svg"
@@ -146,7 +149,7 @@
                 height="24"
                 class="d-inline-block align-text-top"
               />
-              <span class="text-white">Copyright IoDean</span>
+              <span class="text-white copyright">Copyright: IoDean</span>
             </a>
 
             <div class="d-flex gap-2 justify-items-center">
