[update] copy and clear btn

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <pre id="root" class="d-none"></pre>
         <div class="copy-btn position-absolute d-flex gap-1">
           <button class="btn btn-primary" id="copyBtn">copy</button>
-          <button class="btn btn-primary" id="hideBtn">X</button>
+          <button class="btn btn-primary" id="hideBtn">clear</button>
         </div>
       </div>
 
